# SHARE

./: .gitignore  CMakeLists.txt  DEPLOY.md  Makefile  PERSONAL_DRIVE_README.md  README.md  build.sh  cookies.txt  deploy.sh  downloaded_file.txt  service_control.sh  start.sh  优化.md  需求.md
include/: database.h  file_manager.h  json_helper.h  server.h  system_monitor.h
shared/documents/: README_API.md  uploaded_1750967722.txt  welcome.txt
shared/others/: uploaded_1751020867.js
src/: database.cpp  file_manager.cpp  json_helper.cpp  main.cpp  server.cpp  system_monitor.cpp
static/: index.html
static/css/: style.css
static/js/: app.js
